<resources>
    <string name="app_name">FlashCards</string>
    <string name="action_settings">Settings</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="title_activity_making_flash_cards">Add New Questions</string>
    <string name="title_activity_flash_cards">FlashCards</string>
    <string name="title_activity_edit_flash_cards">Decks</string>
    <string name="title_activity_title__creation">Deck Title</string>
    <string name="title_activity_edit_questions">Questions</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="add_title">Add Deck Title</string>
    <string name="title_hint">What is the name of the Deck?</string>
    <string name="question_hint">What is the Question? </string>
    <string name="answer_hint">What is the Answer? </string>
    <string name="add_question_button">Add Question</string>
    <string name="flash_card_test">Test</string>
    <string name="create_flash_cards">Create Flash Cards</string>
    <string name="study_flash_cards">Study Flash Cards</string>
    <string name="edit_flash_cards">Edit Flash Cards</string>
    <string name="title_activity_test">TEST</string>
    <string name="test_enter">Submit</string>
    <string name="title_activity_edit__flash__card">Edit_Flash_Card</string>
    <string name="done_editing_flash_card">Done Editing</string>
    <string name="edit_flashcards">Edit Flash Cards</string>
    <string name="banner_ad_unit_id">ca-app-pub-5145603303163701/3684425272</string>

</resources>
