<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditFlashCard"
    tools:showIn="@layout/activity_edit__flash__card"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deck_title"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left|top"
            android:id="@+id/editquestion_text"
            android:hint="@string/question_hint"
            android:imeOptions="actionDone"
            android:layout_weight="8"
            android:inputType="text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="18sp"
            android:gravity="left|top"
            android:imeOptions="actionDone"
            android:id="@+id/editanswer_text"
            android:hint="@string/answer_hint"
            android:layout_weight="8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done_editing_flash_card"
            android:background="@color/Wrong"
            android:textColor="@color/white"
            android:id="@+id/done_edit_button"/>

    </LinearLayout>

</RelativeLayout>
