<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateQuestions"
    tools:showIn="@layout/activity_create_questions"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flash_card_title"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginTop="-20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="18sp"
            android:gravity="left|top"
            android:id="@+id/question_edittext"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/black"
            android:hint="@string/question_hint"
            android:layout_weight="8"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="left|top"
            android:inputType="text"
            android:backgroundTint="@color/black"
            android:id="@+id/answer_edittext"
            android:hint="@string/answer_hint"
            android:imeOptions="actionDone"
            android:layout_weight="8"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_question_button"
            android:background="@color/Wrong"
            android:textColor="@color/white"
            android:id="@+id/add_question_button"/>

    </LinearLayout>

</RelativeLayout>
