<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Study"
    tools:showIn="@layout/activity_study"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/study_deck_title"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="#000000"
                android:gravity="left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/questionindex"
                android:textSize="18sp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:gravity="left"/>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/question_text"
            android:layout_weight="5"
            android:gravity="left|top"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer_text"
            android:layout_weight="5"
            android:textColor="#000000"
            android:textSize="18sp"
            android:gravity="left|top"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Wrong"
            android:textColor="@color/white"
            android:text="@string/show_answer_button"
            android:id="@+id/show_answer"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/prev_button"
                android:id="@+id/prev_button"
                android:background="@color/Wrong"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/next_button"
                android:id="@+id/next_button"
                android:background="@color/Wrong"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
